fix: Fixed meta data image

--- a/src/app.html
+++ b/src/app.html
@@ -12,18 +12,18 @@
         <!-- Open Graph (OG) for Social Media -->
         <meta property="og:title" content="Free Linux, Docker & Kubernetes Lab - Hands-on Cloud Training">
         <meta property="og:description" content="Get hands-on experience with Linux, Docker, and Kubernetes in an interactive cloud lab.">
-        <meta property="og:image" content="https://labs.livingopensource.org/terminal.svg">
-        <meta property="og:url" content="https://labs.livingopensource.org">
+        <meta property="og:image" content="https://lab.livingopensource.org/terminal.svg">
+        <meta property="og:url" content="https://lab.livingopensource.org">
         <meta property="og:type" content="website">
       
         <!-- Twitter Card for better social sharing -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Linux, Docker & Kubernetes Lab">
         <meta name="twitter:description" content="Deploy, test, and learn cloud-native tech in an online sandbox.">
-        <meta name="twitter:image" content="https://labs.livingopensource.org/terminal.svg">
+        <meta name="twitter:image" content="https://lab.livingopensource.org/terminal.svg">
       
         <!-- Canonical URL to prevent duplicate content issues -->
-        <link rel="canonical" href="https://labs.livingopensource.org">
+        <link rel="canonical" href="https://lab.livingopensource.org">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
