feat: Changed online sharing link image display

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
 		<meta
 			name="description"
-			content="Explore an interactive Linux, Docker, and Kubernetes lab environment at labs.livingopensource.org. Get hands-on experience with cloud-native technologies."
+			content="Explore an interactive Linux, Docker, and Kubernetes lab environment at labs.livingopensource.org. Get hands-on experience with cloud-native technologies. Read through our diverse library Living Open Source meetup presentations"
 		/>
 		<meta
 			name="keywords"
@@ -18,13 +18,13 @@
 		<!-- Open Graph (OG) for Social Media -->
 		<meta
 			property="og:title"
-			content="Free Linux, Docker & Kubernetes Lab - Hands-on Cloud Training"
+			content="Linux, Docker & Kubernetes Lab - Hands-on Cloud Training"
 		/>
 		<meta
 			property="og:description"
 			content="Get hands-on experience with Linux, Docker, and Kubernetes in an interactive cloud lab."
 		/>
-		<meta property="og:image" content="https://lab.livingopensource.org/terminal.png" />
+		<meta property="og:image" content="https://lab.livingopensource.org/cloud-learner.jpeg" />
 		<meta property="og:url" content="https://lab.livingopensource.org" />
 		<meta property="og:type" content="website" />
 
@@ -37,7 +37,7 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="https://lab.livingopensource.org/terminal.png"
+			content="https://lab.livingopensource.org/cloud-learner.jpeg"
 		/>
 
 		<!-- Canonical URL to prevent duplicate content issues -->
